fix: signup not centered

--- a/src/app/start/signup/signup.component.scss
+++ b/src/app/start/signup/signup.component.scss
@@ -2,6 +2,7 @@
 @import "../../../mixins.scss";
 
 $popover-right: calc(1.25rem + max(0px, (100vw - 1920px) / 2));
+$signup-btn-margin: calc(4rem + max(0px, (100vw - 1920px) / 2));
 
 #infoPopover {
   transform: translateX(100vw);
@@ -58,7 +59,7 @@ section {
     position: fixed;
     z-index: 1;
     top: 2rem;
-    left: 4rem;
+    left: $signup-btn-margin;
     @include flex(center, center);
     gap: 1rem;
 
@@ -86,13 +87,13 @@ section {
     height: fit-content;
     width: fit-content;
     max-width: 38rem;
-    padding: 0.875rem 2rem 2rem 2rem;
+    padding: 2rem;
     background-color: white;
     border-radius: 2rem;
     box-shadow: 0px 2px 10px 0px #00000014;
 
     @media (width > 640px) {
-      margin: 6rem auto auto auto;
+      margin: 8rem auto;
     }
 
     @media (width <= 640px) {
